--- a/deploy/cert-manager-webhook-gandi/templates/deployment.yaml
+++ b/deploy/cert-manager-webhook-gandi/templates/deployment.yaml
@@ -2,23 +2,18 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "cert-manager-webhook-gandi.fullname" . }}
-  namespace: {{ .Values.certManager.namespace | quote }}
+  namespace: {{ .Release.Namespace }}
   labels:
-    app: {{ include "cert-manager-webhook-gandi.name" . }}
-    chart: {{ include "cert-manager-webhook-gandi.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "cert-manager-webhook-gandi.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      app: {{ include "cert-manager-webhook-gandi.name" . }}
-      release: {{ .Release.Name }}
+      {{- include "cert-manager-webhook-gandi.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        app: {{ include "cert-manager-webhook-gandi.name" . }}
-        release: {{ .Release.Name }}
+        {{- include "cert-manager-webhook-gandi.selectorLabels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ include "cert-manager-webhook-gandi.fullname" . }}
       containers:
